Separate web server code and add basic status endpoint

--- a/config.json.template
+++ b/config.json.template
@@ -1,5 +1,6 @@
 {
   "hostname": "keg-scale",
+  "httpPort": 80,
   "wifi": {
     "ssid": "<your-wifi-ssid>",
     "passphrase": "<your-wifi-passphrase>"
