--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
