--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -30,6 +30,11 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
