--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -35,7 +35,6 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-swipeable-views-react-18-fix": "^0.14.1"
+    "react-dom": "^18.2.0"
   }
 }
