--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -35,6 +35,7 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fetch-hook": "^1.9.5"
   }
 }
