--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -37,6 +37,7 @@
     "copy-to-clipboard": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fetch-hook": "^1.9.5"
+    "react-fetch-hook": "^1.9.5",
+    "use-long-press": "^2.0.2"
   }
 }
