--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
+    "use-interval": "^1.4.0",
     "use-long-press": "^2.0.2"
   }
 }
