--- a/config.json.template
+++ b/config.json.template
@@ -11,12 +11,14 @@
   },
   "scales": [
     {
+      "label", <label>,
       "clockPin": <clock-pin-for-scale-1>,
       "dataPin": <data-pin-for-scale-1>,
       "gain": <64 or 128>,
       "reverse": false
     },
     {
+      "label", <label>,
       "clockPin": <clock-pin-for-scale-2>,
       "dataPin": <data-pin-for-scale-2>,
       "gain": <64 or 128>,
