--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-use-trigger": "^0.3.4",
+    "reconnecting-websocket": "^4.4.0",
     "use-interval": "^1.4.0",
     "use-long-press": "^2.0.2"
   }
