--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -34,7 +34,9 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@mui/x-date-pickers": "^6.1.0",
     "copy-to-clipboard": "^3.3.2",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
