--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -37,6 +37,7 @@
     "@mui/x-date-pickers": "^6.1.0",
     "copy-to-clipboard": "^3.3.2",
     "dayjs": "^1.11.7",
+    "lodash.merge": "^4.6.2",
     "promise-controller": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
