Replace charting lib, support for full height

--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -35,16 +35,16 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@mui/x-date-pickers": "^6.1.0",
+    "chart.js": "^4.3.0",
     "copy-to-clipboard": "^3.3.2",
     "dayjs": "^1.11.7",
     "lodash.merge": "^4.6.2",
     "promise-controller": "^1.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
-    "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-use-trigger": "^0.3.4",
-    "recharts": "^2.5.0",
     "reconnecting-websocket": "^4.4.0",
     "use-interval": "^1.4.0",
     "use-long-press": "^2.0.2"
