--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -39,6 +39,7 @@
     "copy-to-clipboard": "^3.3.2",
     "dayjs": "^1.11.7",
     "lodash.merge": "^4.6.2",
+    "material-ui-confirm": "^3.0.9",
     "promise-controller": "^1.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
