--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --mode production",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development",
+    "stats": "webpack --mode production --profile --json > stats.json"
   },
   "author": "kmate",
   "license": "ISC",
