--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -41,14 +41,13 @@
     "dayjs": "^1.11.7",
     "lodash.merge": "^4.6.2",
     "material-ui-confirm": "^3.0.9",
+    "preact": "^10.15.1",
     "promise-controller": "^1.0.0",
-    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-use-trigger": "^0.3.4",
     "reconnecting-websocket": "^4.4.0",
     "use-interval": "^1.4.0",
-    "use-long-press": "^2.0.2"
+    "use-long-press": "^3.1.3"
   }
 }
