--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --mode production",
     "start": "webpack-dev-server --mode development",
-    "stats": "webpack --mode production --profile --json > stats.json"
+    "stats": "webpack --mode production --profile --json > stats.json; npx webpack-bundle-analyzer stats.json"
   },
   "author": "kmate",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
   },
