--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-data/config.json
-data/html
+data/
+.direnv
+.pio
+.pre-commit-config.yaml
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
